--- a/du_an_HTML/index.html
+++ b/du_an_HTML/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <p class="container">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vero modi
+      quam optio distinctio repellendus consectetur architecto commodi dolorum,
+      quibusdam, ut dolorem voluptatem necessitatibus assumenda voluptate!
+      Debitis ratione soluta molestiae.
+    </p>
+  </body>
 </html>
