--- a/du_an_HTML/index.html
+++ b/du_an_HTML/index.html
@@ -17,11 +17,55 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <p class="container">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vero modi
-      quam optio distinctio repellendus consectetur architecto commodi dolorum,
-      quibusdam, ut dolorem voluptatem necessitatibus assumenda voluptate!
-      Debitis ratione soluta molestiae.
-    </p>
+    <header class="header">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-4 d-lg-none">
+            <label for="menu-toggle" class="menu-toggle">
+              <i class="fa-solid fa-bars"></i>
+            </label>
+          </div>
+          <div class="col-4 col-lg-2">
+            <div class="logo">
+              <a href="#">
+                <img src="images/logo.png" alt="" />
+              </a>
+            </div>
+            <!-- end logo -->
+          </div>
+          <div class="col-4 col-lg-10">
+            <div class="header-nav">
+              <input type="checkbox" id="menu-toggle" hidden />
+              <label for="menu-toggle" class="menu-overlay"></label>
+              <nav class="menu">
+                <ul>
+                  <li class="active"><a href="#">Trang chủ</a></li>
+                  <li><a href="#">Về Greenchop</a></li>
+                  <li><a href="#">Sản phẩm</a></li>
+                  <li><a href="#">Tin tức</a></li>
+                  <li><a href="#">Liên hệ</a></li>
+                </ul>
+              </nav>
+              <!-- end menu -->
+              <div class="cart-icon">
+                <a href="#">
+                  <img src="images/icons/cart-icon.png" alt="" />
+                  <span>3</span>
+                </a>
+              </div>
+              <!-- end cart-icon -->
+              <div class="search-icon">
+                <a href="#">
+                  <img src="images/icons/search-icon.png" alt="" />
+                </a>
+              </div>
+              <!-- end search-icon -->
+            </div>
+            <!-- end header-nav -->
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- end header -->
   </body>
 </html>
