--- a/du_an_HTML/index.html
+++ b/du_an_HTML/index.html
@@ -67,5 +67,36 @@
       </div>
     </header>
     <!-- end header -->
+
+    <section class="hero">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-6">
+            <div class="hero-text">
+              <h1>GreenChop: Tiện gấp dễ gắp</h1>
+              <h2>
+                AN TOÀN HƠN <br />
+                GIỮA MÙA COVID
+              </h2>
+              <p>
+                GreenChop là sản phẩm đũa thay đầu duy nhất trên thị trường hiện
+                tại. Sản phẩm cho phép người dùng tháo lắp và thay mới đầu đũa
+                100% trong mỗi bữa ăn. Nhờ đó, GreenChop giúp ngăn ngừa khả năng
+                lây lan dịch bệnh và đảm bảo an toàn cho người dùng.
+              </p>
+            </div>
+            <!-- end hero-text -->
+          </div>
+          <div class="col-6">
+            <div class="hero-image">
+              <img src="images/hero-img.png" alt="" />
+              <span>GREEN<br />CHOP</span>
+            </div>
+            <!-- end hero-image -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end .hero -->
   </body>
 </html>
