--- a/du_an_HTML/index.html
+++ b/du_an_HTML/index.html
@@ -71,7 +71,7 @@
     <section class="hero">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-6">
+          <div class="col-12 col-lg-6">
             <div class="hero-text">
               <h1>GreenChop: Tiện gấp dễ gắp</h1>
               <h2>
@@ -87,7 +87,7 @@
             </div>
             <!-- end hero-text -->
           </div>
-          <div class="col-6">
+          <div class="col-12 col-lg-6">
             <div class="hero-image">
               <img src="images/hero-img.png" alt="" />
               <span>GREEN<br />CHOP</span>
@@ -97,6 +97,210 @@
         </div>
       </div>
     </section>
-    <!-- end .hero -->
+    <!-- end hero -->
+
+    <section class="counter">
+      <div class="container">
+        <div class="counter-heading">
+          <h2>
+            GreenChop: Giữ an toàn trong từng <br />
+            bữa ăn của người Việt
+          </h2>
+          <p>
+            Với sự tinh tế trong việc thấu hiểu hành vi của khách hàng cùng ý
+            tưởng đột phá, GreenChop đã trở thành sản phẩm không thể thiếu trong
+            mọi bữa ăn mùa dịch tại các nhà hàng, khách sạn, quán ăn...
+          </p>
+        </div>
+        <!-- end counter-heading -->
+        <div class="counter-list">
+          <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-lg-3">
+              <div class="counter-item">
+                <span class="counter-icon">
+                  <img src="images/icons/quality-icon.png" alt="" />
+                </span>
+                <!-- end counter-icon -->
+                <span class="counter-number">1000+</span>
+                <span class="counter-desc"
+                  >Hộ gia đình tin dùng <br />
+                  GreenChop
+                </span>
+              </div>
+              <!-- end counter-item -->
+            </div>
+
+            <div class="col-12 col-lg-4">
+              <div class="counter-item">
+                <div class="counter-icon">
+                  <img src="images/icons/quality-icon.png" alt="" />
+                </div>
+                <!-- end counter-icon -->
+                <span class="counter-number">600+</span>
+                <span class="counter-desc"
+                  >Nhà hàng đã phục vụ <br />
+                  GreenChop cho thực khách
+                </span>
+              </div>
+              <!-- end counter-item -->
+            </div>
+
+            <div class="col-12 col-lg-3">
+              <div class="counter-item">
+                <div class="counter-icon">
+                  <img src="images/icons/quality-icon.png" alt="" />
+                </div>
+                <!-- end counter-icon -->
+                <span class="counter-number">20+</span>
+                <span class="counter-desc"
+                  >Tỉnh thành được <br />
+                  GreenChop phủ sóng
+                </span>
+              </div>
+              <!-- end counter-item -->
+            </div>
+          </div>
+        </div>
+        <!-- end counter-list -->
+      </div>
+    </section>
+    <!-- end counter -->
+
+    <section class="products">
+      <div class="container">
+        <h2>Sản phẩm</h2>
+        <div class="products-list">
+          <div class="row">
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-01.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Quán ăn</a>
+                </h3>
+                <p class="quantity">1 Thùng 1000 đôi</p>
+                <p class="price">Giá: <span> 600.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-02.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Quán ăn - nhà hàng</a>
+                </h3>
+                <p class="quantity">1 Thùng 2000 đôi</p>
+                <p class="price">Giá: <span> 1.200.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-03.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo Quán ăn <br />Nhà hàng - Khách sạn</a>
+                </h3>
+                <p class="quantity">1 Thùng 3000 đôi</p>
+                <p class="price">Giá: <span> 1.800.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-01.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Gia đình bé xinh</a>
+                </h3>
+                <p class="quantity">1 Thùng 100 đôi</p>
+                <p class="price">Giá: <span> 60.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-02.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Gia đình</a>
+                </h3>
+                <p class="quantity">1 Thùng 200 đôi</p>
+                <p class="price">Giá: <span> 120.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-03.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Đại gia đình</a>
+                </h3>
+                <p class="quantity">1 Thùng 300 đôi</p>
+                <p class="price">Giá: <span> 180.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+          </div>
+        </div>
+        <!-- end  products-list-->
+      </div>
+    </section>
+    <!-- end products -->
   </body>
 </html>
