--- a/du_an_HTML/greenchop.html
+++ b/du_an_HTML/greenchop.html
@@ -17,9 +17,230 @@
     <title>Greenchop</title>
   </head>
   <body>
-    <div class="greenchoptitle">
+    <div class="greenchop-title">
       <h1>Về Greenchop</h1>
     </div>
     <!-- end .greenchop-title -->
+
+    <div class="greenchop-counter">
+      <section class="counter">
+        <div class="container">
+          <div class="counter-heading">
+            <h2>
+              GreenChop: Giữ an toàn trong từng <br />
+              bữa ăn của người Việt
+            </h2>
+            <p>
+              Với sự tinh tế trong việc thấu hiểu hành vi của khách hàng cùng ý
+              tưởng đột phá, GreenChop đã trở thành sản phẩm không thể thiếu
+              trong mọi bữa ăn mùa dịch tại các nhà hàng, khách sạn, quán ăn...
+            </p>
+          </div>
+          <!-- end counter-heading -->
+          <div class="counter-list">
+            <div class="row justify-content-center align-items-center">
+              <div class="col-12 col-lg-3">
+                <div class="counter-item">
+                  <span class="counter-icon">
+                    <img src="images/icons/quality-icon.png" alt="" />
+                  </span>
+                  <!-- end counter-icon -->
+                  <span class="counter-number">1000+</span>
+                  <span class="counter-desc"
+                    >Hộ gia đình tin dùng <br />
+                    GreenChop
+                  </span>
+                </div>
+                <!-- end counter-item -->
+              </div>
+
+              <div class="col-12 col-lg-4">
+                <div class="counter-item">
+                  <div class="counter-icon">
+                    <img src="images/icons/quality-icon.png" alt="" />
+                  </div>
+                  <!-- end counter-icon -->
+                  <span class="counter-number">600+</span>
+                  <span class="counter-desc"
+                    >Nhà hàng đã phục vụ <br />
+                    GreenChop cho thực khách
+                  </span>
+                </div>
+                <!-- end counter-item -->
+              </div>
+
+              <div class="col-12 col-lg-3">
+                <div class="counter-item">
+                  <div class="counter-icon">
+                    <img src="images/icons/quality-icon.png" alt="" />
+                  </div>
+                  <!-- end counter-icon -->
+                  <span class="counter-number">20+</span>
+                  <span class="counter-desc"
+                    >Tỉnh thành được <br />
+                    GreenChop phủ sóng
+                  </span>
+                </div>
+                <!-- end counter-item -->
+              </div>
+            </div>
+          </div>
+          <!-- end counter-list -->
+        </div>
+      </section>
+      <!-- end counter -->
+    </div>
+    <!-- greenchop-counter -->
+
+    <div class="about-greenchop">
+      <div class="container">
+        <div class="title">
+          <h2>Về GreenChop</h2>
+        </div>
+        <!-- end title -->
+
+        <section class="info-greenchop">
+          <div class="row">
+            <div class="col-12 col-lg-5">
+              <div class="image">
+                <img src="images/about_us/us-1.png" alt="" />
+              </div>
+            </div>
+            <div class="col-12 col-lg-5">
+              <div class="info">
+                <p>
+                  Dù chỉ mới ra mắt từ đầu mùa dịch Covid 2021, thương hiệu
+                  GreenChop đã trở thành đối tác cung cấp sản phẩm đũa ăn tin
+                  cậy cho những tên tuổi lớn trong phân khúc nhà hàng, khách
+                  sạn, quán ăn,... tại Việt Nam.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end .info-greenchop section-1 -->
+
+        <section class="info-greenchop">
+          <div class="row">
+            <div class="col-12 col-lg-5">
+              <div class="image">
+                <img src="images/about_us/us-2.png" alt="" />
+              </div>
+            </div>
+            <div class="col-12 col-lg-5">
+              <div class="info">
+                <p>GreenChop - Tiện gấp dễ gắp: An toàn hơn với Covid</p>
+                <p>
+                  Sản phẩm chính của công ty là đũa thay đầu GreenChop. Đây
+                  chính là cái tên đã giúp các nhà hàng, khách sạn, quán ăn...
+                  đã dần lấy lại được sự tin tưởng của thực khách giữa mùa
+                  Covid. Đũa thay đầu là ý tưởng đột phá và tinh tế được xây
+                  dựng từ việc thấu hiểu hành vi ăn uống của khách hàng của đội
+                  ngũ GreenChop. Sản phẩm giúp người dùng đảm bảo tối đa sự
+                  riêng tư, giãn cách và an toàn trong bữa ăn, từ đó, xoa dịu
+                  tâm lý ngại “ăn ngoài” của khách hàng.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end .info-greenchop section-2 -->
+
+        <section class="info-greenchop">
+          <div class="row">
+            <div class="col-12 col-lg-5">
+              <div class="image">
+                <img src="images/about_us/us-3.png" alt="" />
+              </div>
+            </div>
+            <div class="col-12 col-lg-5">
+              <div class="info">
+                <p>
+                  Không chỉ là các chuỗi nhà hàng, khách sạn,..., nhiều người
+                  tiêu dùng cũng đã tin tưởng và chọn lựa GreenChop như một
+                  người bạn đồng hành không thể thiếu cùng gia đình của mình.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end .info-greenchop section-3 -->
+      </div>
+    </div>
+    <!-- end .about-greenchop -->
+
+    <div class="product-main">
+      <div class="cover">
+        <div class="info-main">
+          <h2>Sản phẩm chính của GreenChop</h2>
+          <p>
+            GreenChop đã nghiên cứu tâm lý ăn uống của người Việt để cho ra được
+            sản phẩm với cấu trúc thông minh và thiết kế tinh tế. Đũa xanh
+            GreenChop cho phép người dùng dễ dàng tháo lắp đầu và thân đũa. Việc
+            thay thế đầu đũa mới trong mỗi bữa ăn giúp đảm bảo tính riêng tư và
+            tối thiểu khả năng bị lây virus Covid cũng như các vi khuẩn gây bệnh
+            khác. Sản phẩm đảm bảo thân thiện với môi trường và bảo vệ sức khỏe
+            của người dùng với đầu đũa bằng gỗ tre được khử khuẩn 100%.
+          </p>
+          <svg
+            class="above-quotes"
+            xmlns="http://www.w3.org/2000/svg"
+            width="113"
+            height="87"
+            viewBox="0 0 113 87"
+            fill="none"
+          >
+            <path
+              opacity="0.5"
+              d="M66.0571 59.4597C66.0571 42.1514 71.7578 26.2715 83.1592 11.82C90.3689 3.0818 96.1535 -0.699128 100.513 0.477162C104.537 1.98954 106.549 4.25809 106.549 7.28284C106.549 10.1395 105.208 13.1643 102.525 16.3571C100.01 19.5499 97.9978 22.1545 96.4888 24.171C94.9798 26.1875 93.7223 28.372 92.7163 30.7246C90.3689 35.4298 89.1953 41.1432 89.1953 47.8648C93.2193 46.6886 97.2433 47.1927 101.267 49.3772C108.645 53.5783 112.333 58.9556 112.333 65.5092C112.333 71.8948 110.321 77.1041 106.297 81.1371C102.441 85.002 97.0757 86.9345 90.2013 86.9345C83.3269 86.9345 77.5424 84.3298 72.8477 79.1206C68.3206 73.7432 66.0571 67.1896 66.0571 59.4597ZM0.666748 59.4597C0.666748 41.4793 6.28362 25.5994 17.5173 11.82C26.0684 1.56943 33.1943 -1.53934 38.895 2.49366C40.0686 3.33387 40.6555 4.6782 40.6555 6.52665C40.6555 9.88748 39.398 13.1643 36.883 16.3571C34.5356 19.5499 32.6074 22.1545 31.0984 24.171C29.5894 26.1875 28.3319 28.372 27.3259 30.7246C24.9786 35.4298 23.8049 41.1432 23.8049 47.8648C27.8289 46.6886 31.7691 47.1927 35.6255 49.3772C42.8352 53.5783 46.44 58.9556 46.44 65.5092C46.44 71.8948 44.5118 77.1041 40.6555 81.1371C36.7991 85.002 31.4338 86.9345 24.5594 86.9345C17.685 86.9345 11.9843 84.3298 7.45729 79.1206C2.93026 73.7432 0.666748 67.1896 0.666748 59.4597Z"
+              fill="white"
+            />
+          </svg>
+          <svg
+            class="below-quotes"
+            xmlns="http://www.w3.org/2000/svg"
+            width="112"
+            height="87"
+            viewBox="0 0 112 87"
+            fill="none"
+          >
+            <path
+              opacity="0.5"
+              d="M46.4431 27.7426C46.4431 45.0508 40.7424 60.9307 29.341 75.3823C22.1313 84.1205 16.3468 87.9014 11.9874 86.7251C7.96338 85.2127 5.95136 82.9442 5.95136 79.9194C5.95136 77.0627 7.29271 74.038 9.97539 70.8452C12.4904 67.6524 14.5024 65.0478 16.0114 63.0313C17.5204 61.0148 18.7779 58.8302 19.784 56.4776C22.1313 51.7725 23.305 46.0591 23.305 39.3374C19.2809 40.5137 15.2569 40.0096 11.2329 37.825C3.85553 33.624 0.166837 28.2467 0.166838 21.6931C0.166838 15.3075 2.17885 10.0982 6.20287 6.06521C10.0592 2.20025 15.4246 0.267776 22.299 0.267776C29.1733 0.267777 34.9579 2.87241 39.6526 8.0817C44.1796 13.459 46.4431 20.0126 46.4431 27.7426ZM111.834 27.7426C111.833 45.723 106.217 61.6029 94.9829 75.3823C86.4318 85.6328 79.306 88.7416 73.6053 84.7086C72.4316 83.8684 71.8448 82.5241 71.8448 80.6756C71.8448 77.3148 73.1023 74.038 75.6173 70.8452C77.9646 67.6524 79.8928 65.0478 81.4018 63.0313C82.9108 61.0148 84.1683 58.8302 85.1743 56.4776C87.5217 51.7725 88.6954 46.0591 88.6954 39.3374C84.6713 40.5137 80.7311 40.0096 76.8748 37.825C69.6651 33.624 66.0602 28.2467 66.0602 21.6931C66.0602 15.3075 67.9884 10.0982 71.8448 6.06521C75.7011 2.20025 81.0665 0.267781 87.9409 0.267782C94.8152 0.267783 100.516 2.87242 105.043 8.08171C109.57 13.459 111.834 20.0126 111.834 27.7426Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+      </div>
+    </div>
+    <!-- end .product-main -->
+
+    <div class="mission-greenchop">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="image">
+              <img src="images/mission-greenchop-img.jpg" alt="" />
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="info">
+              <h2>Sứ mệnh của GreenChop</h2>
+              <p>
+                Đội ngũ GreenChop gồm những người trẻ năng động và luôn mong
+                muốn cống hiến cho sức khỏe cộng đồng Việt Nam. Trên tiêu chí
+                đó, GreenChop đã và đang tiếp tục góp sức trong công cuộc chống
+                dịch hiện tại và nhu cầu vệ sinh thực phẩm lâu dài. Trong tương
+                lai, thương hiệu sẽ tiếp tục phát triển những dụng cụ ăn uống cá
+                nhân thông minh. Cùng với sự ủng hộ của các đối tác và thực
+                khách, GreenChop hứa hẹn sẽ xây dựng những thói quen và môi
+                trường ăn uống an toàn cho người Việt.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end .mission-greenchop -->
   </body>
 </html>
