--- a/du_an_HTML/products.html
+++ b/du_an_HTML/products.html
@@ -21,5 +21,332 @@
       <h1>Sản phẩm</h1>
     </div>
     <!-- end .producs-title -->
+
+    <section class="products">
+      <div class="container">
+        <h2>Sản phẩm</h2>
+        <div class="products-list">
+          <div class="row">
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-01.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Quán ăn</a>
+                </h3>
+                <p class="quantity">1 Thùng 1000 đôi</p>
+                <p class="price">Giá: <span> 600.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-02.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Quán ăn - nhà hàng</a>
+                </h3>
+                <p class="quantity">1 Thùng 2000 đôi</p>
+                <p class="price">Giá: <span> 1.200.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-03.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo Quán ăn <br />Nhà hàng - Khách sạn</a>
+                </h3>
+                <p class="quantity">1 Thùng 3000 đôi</p>
+                <p class="price">Giá: <span> 1.800.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-01.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Gia đình bé xinh</a>
+                </h3>
+                <p class="quantity">1 Thùng 100 đôi</p>
+                <p class="price">Giá: <span> 60.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-02.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Gia đình</a>
+                </h3>
+                <p class="quantity">1 Thùng 200 đôi</p>
+                <p class="price">Giá: <span> 120.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+
+            <div class="col-6 col-lg-4">
+              <div class="product-item">
+                <div class="image">
+                  <a href="#">
+                    <img src="images/products/product-03.png" alt="" />
+                  </a>
+                </div>
+                <!-- end image -->
+                <h3 class="name">
+                  <a href="#">Combo <br />Đại gia đình</a>
+                </h3>
+                <p class="quantity">1 Thùng 300 đôi</p>
+                <p class="price">Giá: <span> 180.000 </span> vnd</p>
+                <div class="add-to-cart">
+                  <a href="#" class="btn btn-primary">Thêm vào giỏ hàng</a>
+                </div>
+              </div>
+              <!-- end product-item -->
+            </div>
+            <!-- end col -->
+          </div>
+        </div>
+        <!-- end  products-list-->
+      </div>
+    </section>
+    <!-- end products -->
+
+    <section class="feature-products">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="info">
+              <h2>
+                Đũa thay đầu GreenChop - <br />
+                thẻ xanh an toàn trong từng bữa ăn
+              </h2>
+              <p>
+                GreenChop là sản phẩm đũa thay đầu duy nhất trên thị trường hiện
+                tại. Sản phẩm cho phép người dùng tháo lắp và thay mới đầu đũa
+                100% trong mỗi bữa ăn. Nhờ đó, GreenChop giúp ngăn ngừa khả năng
+                lây lan dịch bệnh và đảm bảo an toàn cho người dùng.
+              </p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="165"
+                height="158"
+                viewBox="0 0 165 158"
+                fill="none"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M10.1759 53.9784C18.1326 38.9289 35.1145 32.5391 49.5253 23.536C62.1441 15.6525 74.2439 7.67077 88.8276 4.84143C105.668 1.57426 125.642 -4.59827 138.981 6.18091C152.367 16.9975 146.482 38.5852 151.145 55.1979C155.312 70.0395 165.044 82.7584 164.809 98.1865C164.518 117.306 164.805 140.432 149.672 152.081C134.534 163.733 112.926 153.957 93.9126 152.759C77.1939 151.705 60.4953 152.838 45.432 145.511C28.5657 137.307 11.0197 126.702 4.25962 109.152C-2.54512 91.4853 1.31424 70.7394 10.1759 53.9784Z"
+                  fill="#F2FFEC"
+                />
+              </svg>
+            </div>
+            <!-- end .info -->
+          </div>
+
+          <div class="col-5">
+            <div class="image">
+              <img src="images/model-produc-img.png" alt="" />
+            </div>
+            <!-- end .image -->
+          </div>
+        </div>
+      </div>
+      <!-- end container -->
+    </section>
+    <!-- end section .feature-products -->
+
+    <section class="feature">
+      <div class="container">
+        <div class="feature-heading">
+          <h2>
+            GreenChop bảo vệ <br />
+            người dùng như thế nào?
+          </h2>
+          <p>
+            Mỗi đôi đũa GreenChop gồm 2 phần thân đũa và đầu đũa. <br />
+            Người dùng có thể dễ dàng tách rời hoặc gắn liền 2 phần này với nhau
+          </p>
+        </div>
+        <!-- end feature-heading -->
+
+        <div class="feature-list">
+          <div class="feature-item">
+            <div class="image">
+              <img src="images/features/feature-01.png" alt="" />
+            </div>
+            <!-- end image -->
+            <div class="info">
+              <h3>01. Thân trên đũa</h3>
+              <p>
+                Làm từ nhựa Melamine, đầy đủ điều kiện chứng nhận An toàn thực
+                phẩm.
+              </p>
+            </div>
+            <!-- end info -->
+          </div>
+          <!-- end feature-item -->
+
+          <div class="feature-item">
+            <div class="image">
+              <img src="images/features/feature-02.png" alt="" />
+            </div>
+            <!-- end image -->
+            <div class="info">
+              <h3>02. Đầu đũa</h3>
+              <p>
+                Được làm từ gỗ tre và bảo quản trong bọc khử trùng 100%, không
+                hề có sự xâm nhập của vi khuẩn/vì rus gây hại. Người dùng là
+                người đầu tiên chạm tay vào đầu đũa sau khi mở bọc.
+              </p>
+            </div>
+            <!-- end info -->
+          </div>
+          <!-- end feature-item  -->
+
+          <div class="feature-item">
+            <div class="image">
+              <img src="images/features/feature-03.png" alt="" />
+            </div>
+            <!-- end image -->
+            <div class="info">
+              <h3>03. Khớp Inox 304</h3>
+              <p>Khớp Inox 304 để gắn 2 phần đũa với nhau</p>
+            </div>
+            <!-- end info -->
+          </div>
+          <!-- end feature-item  -->
+        </div>
+        <!-- end feature-list -->
+      </div>
+    </section>
+    <!-- end features -->
+
+    <section class="use-products">
+      <div class="container">
+        <div class="use-title">
+          <h2>
+            Hướng dẫn thao tác <br />
+            sử dụng đũa GreenChop
+          </h2>
+          <p>
+            Bằng cách này, người dùng sẽ có một đôi đũa với đầu đũa mới 100%,
+            không qua tay bất kỳ ai trước đó
+          </p>
+        </div>
+        <div class="step-use">
+          <div class="row">
+            <div class="col-3">
+              <div class="step">
+                <div class="image">
+                  <img src="images/steps/step-1.png" alt="" />
+                </div>
+                <div class="info">
+                  <p>
+                    Tháo bọc đầu đũa, lấy đầu đũa tre đã khử trùng 100% ghép vào
+                    thân đũa, tạo thành một đôi đũa hoàn chỉnh.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- end col step-1 -->
+
+            <div class="col-3">
+              <div class="step">
+                <div class="image">
+                  <img src="images/steps/step-2.png" alt="" />
+                </div>
+                <div class="info">
+                  <p>
+                    Dùng bữa với đũa GreenChop đã ghép. Sau khi dùng bữa xong,
+                    tháo đầu đũa đã dùng để bỏ đi.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- end col step-2 -->
+
+            <div class="col-3">
+              <div class="step">
+                <div class="image">
+                  <img src="images/steps/step-3.png" alt="" />
+                </div>
+                <div class="info">
+                  <p>
+                    Giữ lại thân đũa, vệ sinh sạch sẽ để sử dụng cho những bữa
+                    ăn sau đó.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- end col step-3 -->
+
+            <div class="col-3">
+              <div class="step">
+                <div class="image">
+                  <img src="images/steps/step-4.png" alt="" />
+                </div>
+                <div class="info">
+                  <p>
+                    Tiếp tục sử dụng một đầu đũa mới để gắn vào thân đũa trong
+                    lần dùng bữa tiếp theo.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- end col step-4 -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end .use-products -->
   </body>
 </html>
