--- a/du_an_HTML/products.html
+++ b/du_an_HTML/products.html
@@ -282,6 +282,7 @@
             không qua tay bất kỳ ai trước đó
           </p>
         </div>
+        <!-- end use-title -->
         <div class="step-use">
           <div class="row">
             <div class="col-3">
@@ -289,12 +290,10 @@
                 <div class="image">
                   <img src="images/steps/step-1.png" alt="" />
                 </div>
-                <div class="info">
-                  <p>
-                    Tháo bọc đầu đũa, lấy đầu đũa tre đã khử trùng 100% ghép vào
-                    thân đũa, tạo thành một đôi đũa hoàn chỉnh.
-                  </p>
-                </div>
+                <p>
+                  Tháo bọc đầu đũa, lấy đầu đũa tre đã khử trùng 100% ghép vào
+                  thân đũa, tạo thành một đôi đũa hoàn chỉnh.
+                </p>
               </div>
             </div>
             <!-- end col step-1 -->
@@ -304,12 +303,10 @@
                 <div class="image">
                   <img src="images/steps/step-2.png" alt="" />
                 </div>
-                <div class="info">
-                  <p>
-                    Dùng bữa với đũa GreenChop đã ghép. Sau khi dùng bữa xong,
-                    tháo đầu đũa đã dùng để bỏ đi.
-                  </p>
-                </div>
+                <p>
+                  Dùng bữa với đũa GreenChop đã ghép. Sau khi dùng bữa xong,
+                  tháo đầu đũa đã dùng để bỏ đi.
+                </p>
               </div>
             </div>
             <!-- end col step-2 -->
@@ -319,12 +316,10 @@
                 <div class="image">
                   <img src="images/steps/step-3.png" alt="" />
                 </div>
-                <div class="info">
-                  <p>
-                    Giữ lại thân đũa, vệ sinh sạch sẽ để sử dụng cho những bữa
-                    ăn sau đó.
-                  </p>
-                </div>
+                <p>
+                  Giữ lại thân đũa, vệ sinh sạch sẽ để sử dụng cho những bữa ăn
+                  sau đó.
+                </p>
               </div>
             </div>
             <!-- end col step-3 -->
@@ -334,12 +329,10 @@
                 <div class="image">
                   <img src="images/steps/step-4.png" alt="" />
                 </div>
-                <div class="info">
-                  <p>
-                    Tiếp tục sử dụng một đầu đũa mới để gắn vào thân đũa trong
-                    lần dùng bữa tiếp theo.
-                  </p>
-                </div>
+                <p>
+                  Tiếp tục sử dụng một đầu đũa mới để gắn vào thân đũa trong lần
+                  dùng bữa tiếp theo.
+                </p>
               </div>
             </div>
             <!-- end col step-4 -->
@@ -348,5 +341,21 @@
       </div>
     </section>
     <!-- end .use-products -->
+
+    <section class="describe-products">
+      <div class="cover">
+        <div class="info">
+          <img src="images/bar-left-img.png" alt="" />
+          <p>
+            Thao tác thay đầu đũa mỗi bữa ăn giúp người dùng sử dụng một đôi đũa
+            mới trong mọi bữa ăn và không có sự xâm nhập của virus/vi khuẩn gây
+            bệnh trước đó. Nhờ vậy, GreenChop đảm bảo an toàn cho thực khách và
+            đẩy lùi nguy cơ lây lan dịch bệnh trong ăn uống hàng ngày.
+          </p>
+          <img src="images/describe-products.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- end .describe-products -->
   </body>
 </html>
