--- a/du_an_HTML/greenchop.html
+++ b/du_an_HTML/greenchop.html
@@ -232,6 +232,8 @@
 
     <div class="product-main">
       <div class="cover">
+        <img src="images/family-img.png" alt="" />
+
         <div class="info-main">
           <h2>Sản phẩm chính của GreenChop</h2>
           <p>
